--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,4 @@
 [[redirects]]
-from = "/"
+from = "/*"
 to = "/index.html"
-status = 200
-
-[[redirects]]
-from = "/accept-invite/:token"
-to = "/accept-invite/:token"
 status = 200
